# casper-contract-schema

./: .gitignore  Cargo.toml  README.md  erc20_schema.json  json-schema.json  justfile
casper-contract-schema/: Cargo.toml
casper-contract-schema/examples/: dns.rs  dns_schema.json  erc20.rs  erc20_schema.json
casper-contract-schema/src/: lib.rs  ty.rs
examples/: erc20_schema.json
src/: lib.rs  ty.rs
