[package]
name = "casper-contract-schema"
description = "Data structures for the Casper Contract Schema."
version = "0.2.0"
edition = "2021"
authors = ["Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
homepage = "https://github.com/odradev/casper-contract-schema"
repository = "https://github.com/odradev/casper-contract-schema"

[dependencies]
casper-types = { git = "https://github.com/igor-casper/casper-node.git", branch = "impl-cltype-for-bidkind" }
schemars = "0.8.18"
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
