[package]
name = "casper-contract-schema"
description = "Data structures for the Casper Contract Schema."
version = "0.4.1"
edition = "2021"
authors = ["Krzysztof Pobiarżyn <krzysztof@odra.dev>", "Maciej Zieliński <maciej@odra.dev>"]
license = "MIT"
homepage = "https://github.com/odradev/casper-contract-schema"
repository = "https://github.com/odradev/casper-contract-schema"

[dependencies]
casper-types = "5"
schemars = "0.9"
serde = { version = "1.0.190", features = ["serde_derive"] }
serde_json = "1.0.108"
